# UsineRobots

./: .gitignore  .gitmodules  Dockerfile  README.md  makefile
arm_node/src/py_armnode/: package.xml  setup.cfg  setup.py
arm_node/src/py_armnode/py_armnode/: armnode.py
arm_node/src/py_armnode_pkg/: CMakeLists.txt  package.xml
arm_node/src/py_armnode_pkg/msg/: TurtleData.msg
arm_node/src/py_armnode_pkg/py_armnode/: armnode.py  outputArmNode.py  turtleBotClass.py
arm_node/src/py_armnode_pkg/srv/: TurtleBotArrived.srv
camera/cameraNiryo/example/: pickPut.py
camera/cameraNiryo/include/: helper.py
camera/cameraNiryo/src/: RobotTriage.py  camera.py
camera/cameraRealSense/: Makefile
camera/cameraRealSense/include/: RealSense.hpp  RealSense_debug.hpp  types.hpp
camera/cameraRealSense/lib/: coord_transform.py  test.py
camera/cameraRealSense/pywrapper/: Makefile  RealSense_bindings.cpp  test.py
camera/cameraRealSense/src/: RealSense.cpp  RealSense_debug.cpp  main.cpp  main_debug.cpp
docs/: Requirements Projet Usine.xlsx  sysML_model.gaphor  turtlebot2_ros2.md  turtles.md
project_management/: 2025-02-04.md  weekly_log.md
project_management/meeting_notes/: 2025-02-02.md  2025-02-04.md  2025-02-06.md  2025-02-07.md
simulation/: DEFAULT_FASTRTPS_PROFILE.xml
simulation/+bus_conv_fcns/+ros2/+msgToBus/: RefCachedMap.mat
simulation/Matlab/: config_initial.mlx  ros1_listen_topic.m  ros2_listen_topic.m  ros2_pub_init.m
simulation/Matlab/Control_turtlebot/: robot.slx  robot.slx.r2023b  robot.slxc  simple_motor_traject.m
simulation/Matlab/Control_turtlebot/slprj/_jitprj/: jitEngineAccessInfo.mat  s5WiSClL6Wad5egtqgzWCLF.l  s5WiSClL6Wad5egtqgzWCLF.mat  s8rKhLXbutD7Ei648MiwQuC.l  s8rKhLXbutD7Ei648MiwQuC.mat  sC4vTFnG28YYmjSlGZhi8tC.l  sC4vTFnG28YYmjSlGZhi8tC.mat  sJDDmB0spuXevL2TSRuDAZD.l  sJDDmB0spuXevL2TSRuDAZD.mat  sPcEqQfbFHM97eRbvYhRmCG.l  sPcEqQfbFHM97eRbvYhRmCG.mat  scFMCMEO8qW8OGHydyyG5nD.l  scFMCMEO8qW8OGHydyyG5nD.mat  siwFw4Xulv3pIJJZD7uTuMC.l  siwFw4Xulv3pIJJZD7uTuMC.mat  sqBaxq4lLwDwkGJ0nFEgqjH.l  sqBaxq4lLwDwkGJ0nFEgqjH.mat
simulation/Matlab/Control_turtlebot/slprj/_sfprj/EMLReport/: EfZIbq4QjqSrzF11OV7eGF.mat  emlReportAccessInfo.mat  s5WiSClL6Wad5egtqgzWCLF.mat  s8rKhLXbutD7Ei648MiwQuC.mat  sC4vTFnG28YYmjSlGZhi8tC.mat  sJDDmB0spuXevL2TSRuDAZD.mat  sPcEqQfbFHM97eRbvYhRmCG.mat  scFMCMEO8qW8OGHydyyG5nD.mat  siwFw4Xulv3pIJJZD7uTuMC.mat  sqBaxq4lLwDwkGJ0nFEgqjH.mat
simulation/Matlab/Control_turtlebot/slprj/_sfprj/precompile/: 0f3ZARqRBQBAsS8p6IFECF.mat  6QkUiTyo6pvLDxmBKONVRE.mat  At7FvFV03N6FiMxmexjYQF.mat  SmPa3s5ZMRlMy7vpMVMISB.mat  Y1h6B155yfr48lZpTtVtjF.mat  aTW3pwgnQkYt4Q6TIk57GH.mat  autoInferAccessInfo.mat  bGd4v9h4WDiTkZGWgl504C.mat  fG3gffoMBATVB7vPsvFOjG.mat  kofCsFBP2FQOH3K4EwSvGH.mat  pPcCvdLDuq67xLxkCTZ2aB.mat  y14ahV2aU1VbvpbzFJpbd.mat
simulation/Matlab/Control_turtlebot/slprj/_sfprj/robot/: amsi_serial.mat
simulation/Matlab/Control_turtlebot/slprj/_sfprj/robot/_self/sfun/info/: binfo.mat
simulation/Matlab/Control_turtlebot/slprj/sim/varcache/robot/: checksumOfCache.mat  varInfo.mat
simulation/Matlab/Control_turtlebot/slprj/sim/varcache/robot/tmwinternal/: simulink_cache.xml
src/arm_coordinator_interface/: CMakeLists.txt  package.xml
src/arm_coordinator_interface/include/arm_coordinator_interface/: objects.h
src/arm_coordinator_interface/srv/: InputArmSetup.srv  NotifyArmFinished.srv  NotifyObjectMovement.srv  NotifyTurtleStateChange.srv
src/arm_interface/: CMakeLists.txt  package.xml
src/arm_interface/include/arm_interface/: arm_interface.hpp
src/arm_interface/src/: arm_interface.cpp
src/arm_interface/srv/: TurtleBotArrived.srv
src/coordinator/: CMakeLists.txt  package.xml
src/coordinator/include/coordinator/: arm_proxy.hpp  coordinator.h  coordinator.hpp  resource_manager_proxy.hpp  turtle_proxy.h  turtle_proxy.hpp
src/coordinator/src/: arm_proxy.cpp  coordinator.cpp  coordinator_main.cpp  resource_manager_proxy.cpp  turtle_proxy.cpp
src/coordinator_interface/: CMakeLists.txt  package.xml
src/coordinator_interface/srv/: NotifyTurtleArrival.srv  NotifyTurtleInitialPosition.srv
src/resource_manager/: CMakeLists.txt  package.xml
src/resource_manager/include/resource_manager/: resource_database.h  resource_database.hpp  resource_database_proxy.h  resource_database_proxy.hpp  resource_request_respond.h  resource_request_respond.hpp  resource_request_responder.h
src/resource_manager/src/: resource_database.cpp  resource_database_proxy.cpp  resource_manager.cpp  resource_request_respond.cpp
src/resource_manager/srv/: RequestResource.srv
src/resource_manager_interface/: CMakeLists.txt  package.xml
src/resource_manager_interface/include/resource_manager_interface/: resource_manager_interface.hpp
src/resource_manager_interface/src/: resource_manager_interface.cpp
src/resource_manager_interface/srv/: RequestResource.srv
src/turtle_coordinator_interface/: CMakeLists.txt  package.xml
src/turtle_coordinator_interface/msg/: TurtleMove.msg
src/turtle_coordinator_interface/srv/: NotifyTurtleArrival.srv  NotifyTurtleInitialPosition.srv
src/turtle_interface/: CMakeLists.txt  package.xml
src/turtle_interface/include/turtle_interface/: turtle.h
