<?xml version="1.0"?>
<package format="3">
  <name>py_armnode_pkg</name>
  <version>0.0.0</version>
  <description>Python Node for Ned2 arm control via pyniryo library</description>
  <maintainer email="oreste.mosciatti@uc.cl">oretmj</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>arm_interface</depend>
  <depend>coordinator_interface</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

